src/test/deca/syntax/parser/invalid/decl_var_in_if.deca
// Test parser, pas le droit de déclarer une variable après
// la liste de déclaration, ici dans un if

{

    if (x || y ){
        int z = 5;
    }
}